# Sadgewick

./: .gitignore  Complex.h  ConsoleApplication1.sln  Deque.h  List.h  Mas.h  Matrix.h  Tree.h  UF.h  out.txt
03-Elementary_data_structures/: 3.4-Lists_processing.cpp
03_Elementary_data_structures/: 3.7-Compound_data_structures.cpp
04-Abstract_data_types/: 4.06-Fifo_queues_and_generalized_queues.cpp
04_Abstract_data_types/: 4.03-Examples_of_stack_adt_clients.cpp  4.08-First_class_adts.cpp  Misc.cpp
05-Recursion_and_trees/: 5.01-Recursive_algorithm.cpp  5.03-Dynamic_programming.cpp  5.08-Graph_traversal.cpp
05_Recursion_and_trees/5.08_Graph_traversal/examples/: CMakeLists.txt  ex_5_21.cpp  ex_5_22.cpp
06-Elementary_sorting_methods/: 6.05-Shaker_sort.cpp  6.08-Index_and_pointer_sorting.cpp
06_Elementary_sorting_methods/: 6.02-Selection_sort.cpp  6.03-Insertion_sort.cpp  6.04-Bubble_sort.cpp
09_Priority_queues_and_heapsort/9.01-elementary_implementations/examples/: CMakeLists.txt  ex_9_2.cpp  ex_9_2.h
09_Priority_queues_and_heapsort/9.01-elementary_implementations/exercises/: ex_9_13.cpp  ex_9_7.cpp  ex_9_7.h  ex_9_8.h
09_Priority_queues_and_heapsort/9.01_Elementary_implementations/exercises/: CMakeLists.txt  ex_9_14.cpp  ex_9_8.cpp  ex_9_9.cpp  ex_9_9.h
09_Priority_queues_and_heapsort/9.01_Elementary_implementations/exercises/ex_9_7/: main.cpp
09_Priority_queues_and_heapsort/9.03_Algorithms_on_heaps/examples/: CMakeLists.txt  ex_9_5.cpp  ex_9_5.h  ex_9_6.cpp
09_Priority_queues_and_heapsort/9.04_Heapsort/examples/: CMakeLists.txt  ex_9_7.cpp  ex_9_7.h
09_Priority_queues_and_heapsort/9.05_Priority_queue_adt/examples/: CMakeLists.txt  ex_9_9.cpp
09_Priority_queues_and_heapsort/9.06_Priority_queues_for_index_items/examples/: CMakeLists.txt  ex_9_12.cpp
09_Priority_queues_and_heapsort/9.07_Binomial_queues/examples/: CMakeLists.txt  ex_9_13.cpp  ex_9_14.cpp  ex_9_16.cpp
10_Radix_sort/10.01_Bits_bytes_and_words/examples/: CMakeLists.txt  ex_10_0.cpp
10_Radix_sort/10.02_Binary_quick_sort/examples/: CMakeLists.txt  ex_10_1.cpp
10_Radix_sort/10.02_Binary_quick_sort/exercises/: CMakeLists.txt  ex_10_12.cpp
10_Radix_sort/10.03_MSD_sort/examples/: CMakeLists.txt  ex_10_2.cpp
10_Radix_sort/10.04_Three-way_bitwise_quicksort/examples/: CMakeLists.txt  ex_10_3.cpp
10_Radix_sort/10.05_LSD_sort/examples/: CMakeLists.txt  ex_10_4.cpp
11_Special_purpose_sorting_methods/11.01_Batchers_odd_even_mergesort/examples/: CMakeLists.txt  ex_11_1.cpp  ex_11_2.cpp  shuffle_unshuffle.h
11_Special_purpose_sorting_methods/11.02_Sorting_networks/examples/: CMakeLists.txt  ex_11_3.cpp  ex_11_4.cpp
12_Symbol_tables_and_binary_search_trees/12.01_Symbol_adt/examples/: CMakeLists.txt  ex_12_1.cpp
12_Symbol_tables_and_binary_search_trees/12.02_Key_indexed_search/examples/: CMakeLists.txt  ex_12_4.cpp
12_Symbol_tables_and_binary_search_trees/12.03_Sequential_search/examples/: CMakeLists.txt  ex_12_5.cpp  ex_12_6.cpp
12_Symbol_tables_and_binary_search_trees/12.04_Binary_search/examples/: CMakeLists.txt  ex_12_7.cpp
12_Symbol_tables_and_binary_search_trees/12.04_Binary_search/exercises/: CMakeLists.txt  ex_12_34.cpp
12_Symbol_tables_and_binary_search_trees/12.05_Binary_search_trees/examples/: CMakeLists.txt  ST.h  ex_12_10.cpp  ex_12_8.cpp  ex_12_9.cpp
12_Symbol_tables_and_binary_search_trees/12.07_Index_implementation_with_symbol_tables_using/examples/: CMakeLists.txt  Item.h  ex_12_11.cpp  in.txt
12_Symbol_tables_and_binary_search_trees/12.08_Insertion_at_the_root_in_BSTs/examples/: CMakeLists.txt  ex_12_12.cpp  ex_12_13.cpp
12_Symbol_tables_and_binary_search_trees/12.08_Insertion_at_the_root_in_BSTs/exercises/: CMakeLists.txt  ex_12_73.cpp  ex_12_76.cpp
12_Symbol_tables_and_binary_search_trees/12.09_BST_implementations_of_other_adt_functions/examples/: CMakeLists.txt  ex_12_14.cpp  ex_12_16.cpp  ex_12_17.cpp
12_Symbol_tables_and_binary_search_trees/12.09_BST_implementations_of_other_adt_functions/exercises/: CMakeLists.txt  ex_12_78.cpp
13_Balanced_trees/13.00_Balanced_trees/examples/: CMakeLists.txt  Item.h  Key.h  ST.h  ex_13_1.cpp
13_Balanced_trees/13.01_Randomized_BST/examples/: CMakeLists.txt  ex_13_2.cpp  ex_13_3.cpp  ex_13_4.cpp
13_Balanced_trees/13.02_Extended_BST/examples/: CMakeLists.txt  ex_13_5.cpp
13_Balanced_trees/13.04_Red-Black_trees/examples/: CMakeLists.txt  RBTree.h  ex_13_6.cpp
13_Balanced_trees/13.05_Skip_list/examples/: CMakeLists.txt  SkipList.h  ex_13_10.cpp  ex_13_9.cpp
14_Hashing/14.01_Hash_functions/examples/: CMakeLists.txt  Hash.h  ex_14_1.cpp  ex_14_2.cpp
14_Hashing/14.02_Separate_binding/examples/: CMakeLists.txt  HashTable.h  ex_14_3.cpp
14_Hashing/14.03_Linear_probing/examples/: CMakeLists.txt  HashTable.h  ex_14_4.cpp
14_Hashing/14.04_Double_hashing/examples/: CMakeLists.txt  ex_14_6.cpp
14_Hashing/14.05_Dynamic_hash_tables/examples/: CMakeLists.txt  ex_14_7.cpp
15_Radix_search/15.01_Digital_search_trees/examples/: CMakeLists.txt  DST.h
ConsoleApplication1/: 1_Bind.cpp  2_Analitycs.cpp  3.2_Arrays.cpp  3.3_Lists.cpp  3.5 Lists_alolcate_memory.cpp  3.6 Strings.cpp  3.7 Compound_data_structures.cpp  3_Sort.cpp  4_Graph.cpp  Complex.h  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  List.h  Mas.h  Matrix.h  Point.h  Poly.h  Queue.h  Sort.h  Stack.h  Tree.h
ConsoleApplication1/04-Abstract_data_types/: 4.00-Abstract_data_types.cpp  4.03-Examples_of_stack_adt_clients.cpp  4.04-Stack_adt_implementations.cpp  4.05-Creation_of_new_adt.cpp  4.07-Duplicate_and_index_items.cpp  4.08-First_class_adts.cpp  4.09-Application_based_adt_example.cpp
ConsoleApplication1/05-Recursion_and_trees/: 5.02-Divide_and_conquer.cpp  5.03-Dynamic_programming.cpp  5.06-Tree traversial.cpp  5.07-Recursive_binary_tree_algorithms.cpp
ConsoleApplication1/06-Elementary_sorting_methods/: 6.05-Shaker_sort.cpp  6.06-Shell_sort.cpp  6.07-Sorting_of_other_types_of_date.cpp  6.09-Linked_list_sorting.cpp
ConsoleApplication1/Data/: storyDataFile  tree.txt
Data/: 1.txt
Sort/: CMakeLists.txt  main.cpp  makefile  sort.h
(+63 files in other folders)
